--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".pedido"></activity>
+        <activity android:name=".RegistrarUsuario"></activity>
+        <activity android:name=".pedido" />
         <activity android:name=".seleccionar" />
         <activity android:name=".menu" />
         <activity android:name=".restaurant" />
