--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegistrarUsuario"></activity>
-        <activity android:name=".pedido" />
-        <activity android:name=".seleccionar" />
-        <activity android:name=".menu" />
-        <activity android:name=".restaurant" />
-        <activity android:name=".usuario" />
-        <activity android:name=".administrador" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".RegistrarUsuario" />
+        <activity android:name=".pedido" />
+        <activity android:name=".seleccionar" />
+        <activity android:name=".menu" />
+        <activity android:name=".restaurant" />
+        <activity android:name=".usuario" />
+        <activity android:name=".administrador" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
