--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RealizarPedido"></activity>
+        <activity android:name=".Ordenes"></activity>
+        <activity android:name=".RealizarPedido" />
         <activity android:name=".Menus" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
